# systray

./: README.md
coretemp_cmake/: CMakeLists.txt  CMakeLists.txt.user.0784673  coretemp.cpp  main.cpp  window.cpp  window.h  шаблон.xcf
systray/: CMakeLists.txt  main.cpp  systray.cpp  systray.h
